@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#2e2e2e" />
+    <stroke android:width="2dp" android:color="#e7e4df"></stroke>
+    <corners android:radius="10dp"></corners>
+</shape>
