@@ -21,7 +21,7 @@
         android:id="@+id/header_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="75dp"></LinearLayout>
+        android:layout_height="40dp"></LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -55,5 +55,29 @@
             android:layout_height="wrap_content"></LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/footer_layout"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"></LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <LinearLayout
+            android:id="@+id/nb_line_1"
+            android:orientation="horizontal"
+            android:layout_marginBottom="20px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></LinearLayout>
+        <LinearLayout
+            android:id="@+id/nb_line_2"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
